{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 30,
  "lineage": "276d5d60-3753-0cce-4968-a437044dc2d7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "static",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.172.214.9",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-11-14T23:44:46.619-08:00",
            "id": "projects/boxwood-destiny-400202/regions/us-central1/addresses/vm-public-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "vm-public-address",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "boxwood-destiny-400202",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-destiny-400202/regions/us-central1/addresses/vm-public-address",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/boxwood-destiny-400202/zones/us-central1-a/instances/devserver"
            ]
          },
          "dependencies": [
            "google_compute_firewall.firewall"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-14T23:44:34.126-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/boxwood-destiny-400202/global/firewalls/gritfy-firewall-externalssh",
            "log_config": [],
            "name": "gritfy-firewall-externalssh",
            "network": "https://www.googleapis.com/compute/v1/projects/boxwood-destiny-400202/global/networks/default",
            "priority": 1000,
            "project": "boxwood-destiny-400202",
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-destiny-400202/global/firewalls/gritfy-firewall-externalssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "externalssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "webserverrule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-11-14T23:44:34.040-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/boxwood-destiny-400202/global/firewalls/gritfy-webserver",
            "log_config": [],
            "name": "gritfy-webserver",
            "network": "https://www.googleapis.com/compute/v1/projects/boxwood-destiny-400202/global/networks/default",
            "priority": 1000,
            "project": "boxwood-destiny-400202",
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-destiny-400202/global/firewalls/gritfy-webserver",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "webserver"
            ],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20231113",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/boxwood-destiny-400202/zones/us-central1-a/disks/devserver"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/boxwood-destiny-400202/zones/us-central1-a/instances/devserver",
            "instance_id": "4585122821381408296",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "u5Py3qLhpuQ=",
            "name": "devserver",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.172.214.9",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/boxwood-destiny-400202/global/networks/default",
                "network_ip": "10.128.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/boxwood-destiny-400202/regions/us-central1/subnetworks/default",
                "subnetwork_project": "boxwood-destiny-400202"
              }
            ],
            "project": "boxwood-destiny-400202",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/boxwood-destiny-400202/zones/us-central1-a/instances/devserver",
            "service_account": [
              {
                "email": "terraform-practice@boxwood-destiny-400202.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute.readonly"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "externalssh",
              "webserver"
            ],
            "tags_fingerprint": "Mh9u1hBHiNA=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_address.static",
            "google_compute_firewall.firewall",
            "google_compute_firewall.webserverrule"
          ]
        }
      ]
    }
  ]
}